--- a/data_produce/readme
+++ b/data_produce/readme
@@ -1,4 +1,2 @@
-dataproduce.py会生成对应的训练集，验证集和测试集
-art_fun.py是art算法
-wgn_fun是将数据集添加高斯噪声
-weight.py生成投影矩阵
+1.weight.py生成投影矩阵
+2.dataproduce.py会生成对应的训练集，验证集和测试集，（其中art_fun.py是art算法，wgn_fun是将数据集添加高斯噪声）
